# AuraOS

./: .gitignore  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  Cargo.toml  DIRECTORY_PLAN.md  PHILOSOPHY.md  auto_build.sh  merge_and_dispatch.sh  rebuild_queue_backup.txt  status_update.sh
apps/files/: Cargo.toml
apps/files/src/: lib.rs
apps/settings/: Cargo.toml
apps/settings/src/: lib.rs
apps/terminal/: Cargo.toml
apps/terminal/src/: lib.rs
boot/: Cargo.toml
boot/src/: main.rs
companion/intents/: Cargo.toml
companion/llm/: Cargo.toml
companion/memory/: Cargo.toml
companion/tts/: Cargo.toml
companion/whisper/: Cargo.toml
docs/mockups/: desktop.html
drivers/camera/: Cargo.toml
drivers/display/: Cargo.toml
drivers/microphone/: Cargo.toml
drivers/network/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: a2a_artifact_handler.rs  a2a_host.rs  a2a_protocol.rs  a2a_protocol_v2.rs  a2a_push_notify.rs  a2a_server.rs  a2a_task_handler.rs  accelerometer_driver.rs  access_adhd_mode.rs  access_ai_chart_describe.rs  access_ai_document_read.rs  access_ai_image_describe.rs  access_ai_scene_describe.rs  access_autism_sensory.rs  access_balance_audio.rs  access_bounce_keys.rs  access_braille_display.rs  access_braille_input.rs  access_caption_style.rs  access_cognitive_assist.rs  access_color_blind_deuteranopia.rs  access_color_blind_protanopia.rs  access_color_blind_tritanopia.rs  access_color_invert.rs  access_cursor_highlight.rs  access_dwell_click.rs  access_dyslexia_font.rs  access_eye_track_navigate.rs  access_filter_keys.rs  access_flash_screen_alert.rs  access_focus_indicator.rs  access_haptic_feedback.rs  access_head_mouse.rs  access_high_contrast.rs  access_large_cursor.rs  access_live_caption_all.rs  access_mono_audio.rs  access_mouse_keys.rs  access_on_screen_keyboard.rs  access_one_hand_keyboard.rs  (+2875 more)
kernel/src/net/: buffer.rs  mod.rs  phy.rs
mobile/aura-mobile/: Cargo.toml
scripts/: ollama_build.sh
services/audio-intelligence/: Cargo.toml
services/aurafs/: Cargo.toml
services/biometric/: Cargo.toml
services/init/: Cargo.toml
services/network/: Cargo.toml
services/phone-bridge/: Cargo.toml
services/presence/: Cargo.toml
services/session-manager/: Cargo.toml
services/setup-wizard/: Cargo.toml
services/user-manager/: Cargo.toml
services/vfs/: Cargo.toml
services/vision/: Cargo.toml
shell/compositor/: Cargo.toml
shell/input/: Cargo.toml
shell/surfaces/: Cargo.toml
shell/themes/: Cargo.toml
(+81 files in other folders)
