[workspace]
resolver = "2"
members = [
    "kernel",
    "boot",
    "drivers/network",
    "services/network",
    "services/setup-wizard",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Venkat Yarlagadda", "Taylor Oclaw"]
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
