[workspace]
resolver = "2"
members = [
    "kernel",
    "boot",
    "drivers/camera",
    "drivers/display",
    "drivers/microphone",
    "drivers/network",
    "shell/compositor",
    "shell/surfaces",
    "shell/themes",
    "shell/input",
    "services/audio-intelligence",
    "services/biometric",
    "services/init",
    "services/network",
    "services/phone-bridge",
    "services/presence",
    "services/setup-wizard",
    "services/vfs",
    "services/aurafs",
    "services/vision",
    "companion/llm",
    "companion/whisper",
    "companion/tts",
    "companion/intents",
    "companion/memory",
    "apps/terminal",
    "apps/files",
    "apps/settings",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Venkat Yarlagadda", "Taylor Oclaw"]
license = "MIT"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
